Fix Java 8 build break